--- a/src/pages/list-bon/list-bon.html
+++ b/src/pages/list-bon/list-bon.html
@@ -1,9 +1,7 @@
 <ion-header>
-
     <ion-navbar>
         <ion-title>{{ 'BONS_TITLE' | translate }}</ion-title>
     </ion-navbar>
-
 </ion-header>
 
 <ion-content>
@@ -14,30 +12,41 @@
     <ion-list>
         <ion-item-sliding *ngFor="let bon of listBons">
             <button ion-item (click)="openItem(bon)">
-      <ion-avatar item-start>
-        <img [src]="'assets/img-gbcys/logo.jpg'" />
-      </ion-avatar>
-      <h2>{{bon.bon_sort}}</h2>
-      <p>{{bon.date_sort}}</p>
-      <p>{{bon.nom_mag}}</p>
-      <ion-note item-end *ngIf="bon.rejeter==1">{{ 'REJECT' | translate }}</ion-note>
-      <ion-note item-end *ngIf="bon.bon_vu==0&&bon.rejeter==0">{{ 'ENATTENTE' | translate }}</ion-note>
-    </button>
+        <ion-avatar item-start>
+          <img [src]="'assets/img-gbcys/logo.jpg'" />
+        </ion-avatar>
+        <h2>{{bon.bon_sort}}</h2>
+        <p>{{bon.date_sort}}</p>
+        <p>
+          {{bon.nom_mag}}
+          <ion-icon name="arrow-back" *ngIf="bon.rejeter==1"></ion-icon>
+          <ion-icon
+            name="arrow-forward"
+            *ngIf="bon.bon_vu==0&&bon.rejeter==0"
+          ></ion-icon>
+          {{bon.nom_mag_sort_dst}}
+        </p>
+        <ion-note item-end *ngIf="bon.rejeter==1" color="danger"
+          >{{ 'REJECT' | translate }}</ion-note
+        >
+        <ion-note item-end *ngIf="bon.bon_vu==0&&bon.rejeter==0"
+          >{{ 'ENATTENTE' | translate }}</ion-note
+        >
+      </button>
 
             <ion-item-options *ngIf="bon.bon_vu==0">
                 <button ion-button color="danger" (click)="deleteItem(bon)">
-                {{ 'REJECT_BUTTON' | translate }}
-              </button>
+          {{ 'REJECT_BUTTON' | translate }}
+        </button>
                 <button ion-button class="success" shape="round" (click)="deleteItem(bon)">
-                {{ 'ACCEPT_BUTTON' | translate }}
-              </button>
-
+          {{ 'ACCEPT_BUTTON' | translate }}
+        </button>
             </ion-item-options>
 
             <ion-item-options *ngIf="bon.rejeter==1">
                 <button ion-button class="warning" shape="round" (click)="deleteItem(bon)">
-                {{ 'RESEND_BUTTON' | translate }}
-              </button>
+          {{ 'RESEND_BUTTON' | translate }}
+        </button>
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
