--- a/src/pages/bon-detail/bon-detail.html
+++ b/src/pages/bon-detail/bon-detail.html
@@ -18,6 +18,7 @@
             <ion-icon name="arrow-forward" *ngIf="bon.bon_vu==0&&bon.rejeter==0"></ion-icon>
             {{bon.nom_mag_sort_dst}}
         </p>
+        <p>Auteur : {{bon.login_sort}}</p>
     </div>
     <ion-grid>
         <ion-row class="ion-align-items-start">
