--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-    <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="folder"></ion-tab>
-    <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="folder"></ion-tab>
-    <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="search"></ion-tab>
-    <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="cog"></ion-tab>
+    <ion-tab [root]="tab1Root" [tabTitle]="'TAB1_TITLE' | translate" tabIcon="folder"></ion-tab>
+    <ion-tab [root]="tab4Root" [tabTitle]="'TAB4_TITLE' | translate" tabIcon="folder"></ion-tab>
+    <ion-tab [root]="tab2Root" [tabTitle]="'TAB2_TITLE' | translate" tabIcon="people"></ion-tab>
+    <ion-tab [root]="tab3Root" [tabTitle]="'TAB3_TITLE' | translate" tabIcon="cog"></ion-tab>
 </ion-tabs>
