--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab [root]="tab0Root" [tabTitle]="'TAB0_TITLE' | translate" tabIcon="folder"></ion-tab>
+    <ion-tab [root]="tab0Root" [tabTitle]="'TAB0_TITLE' | translate" tabIcon="folder" *ngIf="false"></ion-tab>
     <ion-tab [root]="tab1Root" [tabTitle]="'TAB1_TITLE' | translate" tabIcon="folder"></ion-tab>
     <ion-tab [root]="tab4Root" [tabTitle]="'TAB4_TITLE' | translate" tabIcon="folder"></ion-tab>
     <ion-tab [root]="tab2Root" [tabTitle]="'TAB2_TITLE' | translate" tabIcon="people"></ion-tab>
