--- a/src/pages/demandes/list-demande/list-demande.html
+++ b/src/pages/demandes/list-demande/list-demande.html
@@ -38,8 +38,8 @@
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
-    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)" *ngIf="closed">
+    <!-- <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)" *ngIf="closed">
         <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
         </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    </ion-infinite-scroll> -->
 </ion-content>
