--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -20,6 +20,9 @@
             <div padding>
                 <button ion-button color="danger" block (click)="logout()">{{ 'LOGOUT_BUTTON' | translate }}</button>
             </div>
+            <div padding>
+                <p>Version : {{version}}</p>
+            </div>
         </ion-list>
     </form>
 
