--- a/src/pages/demandes/detail-demande/detail-demande.html
+++ b/src/pages/demandes/detail-demande/detail-demande.html
@@ -17,6 +17,7 @@
     </div>
     <div class="demande-detail" padding>
         <p>Type demande : {{demande.type_demande}}</p>
+        <p>Montant : {{demande.montant}}</p>
         <h5>Description</h5>
         <p>{{demande.details}}</p>
     </div>
