--- a/src/pages/factures/list/list.html
+++ b/src/pages/factures/list/list.html
@@ -14,7 +14,7 @@
         <ion-item-sliding *ngFor="let facture of listfactures">
             <button ion-item (click)="openItem(facture)">
         <ion-avatar item-start>
-          <img [src]="'assets/img-gbcys/logo.jpg'" />
+          <img [src]="'assets/lina/logo.jpg'" />
         </ion-avatar>
         <h2><b>{{facture.code_fact}}</b></h2>
         <p>{{facture.date_fact}}</p>
