--- a/src/pages/list-bon/list-bon.html
+++ b/src/pages/list-bon/list-bon.html
@@ -14,7 +14,7 @@
         <ion-item-sliding *ngFor="let bon of listBons">
             <button ion-item (click)="openItem(bon)">
         <ion-avatar item-start>
-          <img [src]="'assets/img-gbcys/logo.jpg'" />
+          <img [src]="'assets/lina/logo.jpg'" />
         </ion-avatar>
         <h2>{{bon.bon_sort}}</h2>
         <p>{{bon.date_sort}}</p>
