--- a/src/pages/reglement/list/list-client.html
+++ b/src/pages/reglement/list/list-client.html
@@ -14,7 +14,7 @@
         <ion-item-sliding *ngFor="let client of listclients">
             <button ion-item (click)="openItem(client)">
         <ion-avatar item-start>
-          <img [src]="'assets/img-gbcys/logo.jpg'" />
+          <img [src]="'assets/lina/logo.jpg'" />
         </ion-avatar>
         <h2><b>{{client.code_clt}}</b></h2>
         <p>{{client.nom_clt}}</p>
