--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -13,7 +13,7 @@
         <button ion-item (click)="openBon(bon)" *ngFor="let bon of currentBons">
           <button ion-item (click)="openItem(bon)">
             <ion-avatar item-start>
-              <img [src]="'assets/img-gbcys/logo.jpg'" />
+              <img [src]="'assets/lina/logo.jpg'" />
             </ion-avatar>
             <h2>{{bon.bon_sort}}</h2>
             <p>{{bon.date_sort}}</p>
